# todo-crud

./: Cargo.toml  README.md
src/: main.rs
static/: style.css
templates/: main_form.html.hbs  main_table.html.hbs
