[package]
name = "rocket-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#rocket = {version="0.5.0-rc.1", features=["json", "tls"]}
#rocket_db_pools = {version="0.1.0-rc.4", features=["sqlx_postgres"]}
#sqlx = {version="0.7.2", features=["macros", "migrate"]}

[dependencies]
tokio = {version="1.34.0"}
tokio-postgres = "0.7.10"

[build-dependencies]
syn = "1"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "tls"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]